--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+.idea
+logs
+tmp
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -22,4 +25,5 @@ go.work
 go.work.sum
 
 # env file
-.env
+.env*
+!.env.example
